--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL="mysql://root:@localhost:3306/jobword_nodejs?schema=public"
 SESSION_SECRET="welcometomyworld"
+PASSWORD_SALT="this-is-a-salt"
