--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-paginate": "^1.0.2",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "joi": "^17.9.1",
